# book-deep-learning

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ch2-p026/: Cargo.toml
ch2-p026/src/: main.rs
ch2-p027/: Cargo.toml
ch2-p027/src/: main.rs
ch2-p028/: Cargo.toml
ch2-p028/src/: main.rs
ch2-p029/: Cargo.toml
ch2-p029/src/: main.rs
ch2-pr1/: Cargo.toml
ch2-pr1/src/: main.rs
ch2-pr2/: Cargo.toml
ch2-pr2/src/: main.rs
ch3-pr1/: Cargo.toml
ch3-pr1/src/: main.rs
ch3-pr2/: Cargo.toml
ch3-pr2/src/: main.rs
ch3-pr3/: Cargo.toml
ch3-pr3/src/: main.rs
ch3-pr4/: Cargo.toml
ch3-pr4/src/: main.rs  shape.rs
ch3-pr5/: Cargo.toml
ch3-pr5/src/: main.rs
ch4-p061/: Cargo.toml  data.csv
ch4-p061/src/: main.rs
ch4-p062/: Cargo.toml
ch4-p062/src/: main.rs
ch4-p61/: Cargo.toml
ch4-p61/src/: main.rs
ch4-p62/: Cargo.toml
ch4-p62/src/: main.rs
ch4-pr1/: Cargo.toml
ch4-pr1/src/: main.rs
ch4-pr2/: Cargo.toml
ch4-pr2/src/: main.rs
ch5-p070/: Cargo.toml
ch5-p070/src/: main.rs
ch5-p071/: Cargo.toml
ch5-p071/src/: main.rs
ch5-p073/: Cargo.toml
ch5-p073/src/: main.rs
ch5-p074/: Cargo.toml
ch5-p074/src/: main.rs
src/: main.rs
