[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Deep Learning with Rust' by Mehrdad Maleki"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-deep-learning"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-deep-learning"
rust-version = "1.94.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
# none

[profile.dev]
debug = "line-tables-only"

[workspace]
members = ["ch2-p026", "ch2-p027", "ch2-p028"]

[workspace.dependencies]
linfa = "=0.7.0"
ndarray = "=0.15.6"
tch = "=0.23.0"
