[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Deep Learning with Rust' by Mehrdad Maleki"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-deep-learning"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-deep-learning"
rust-version = "1.94.1"
version = "0.0.0-SNAPSHOT"

[dependencies]
# none

[profile.dev]
codegen-units = 256
# debug = "line-tables-only"
debug = true
opt-level = 0
lto = "off"

[profile.release]
codegen-units = 1
debug = false
# lto = "thin"
lto = true
opt-level = 3

[workspace]
members = [
  "ch2-p026",
  "ch2-p027",
  "ch2-p028",
  "ch2-p029",
  "ch2-pr1",
  "ch2-pr2",
  "ch3-pr1",
  "ch3-pr2",
]

[workspace.dependencies]
autograd = "=1.1.1"
linfa = "=0.8.1"
# ndarray 0.17 is incompatible with linfa 0.8
ndarray = "=0.16.1"
rayon = "1.11.0"
tch = "=0.24.0"
tokio = "1.50.0"
