[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from 'Deep Learning with Rust' by Mehrdad Maleki"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "ch2-p026"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-deep-learning"
rust-version = "1.94.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
ndarray = { workspace = true }
